<resources>

    <!-- Purchase Preferences -->
    <string name="ads_pref_sum">Remove ads from this account</string>
    <string name="ads_pref_title">Remove In-App Ads</string>

    <!-- Account Preferences -->
    <string name="account_title">Account</string>
    <string name="google_pref_sum">Linking google account is required for the chrome extension</string>
    <string name="google_pref_title">Link Google Account</string>

    <!-- Notification Preferences -->
    <string name="system_notifications">Additional options in system settings…</string>
    <string name="database_notification_pref">New Shared Clip Notification</string>
    <string name="database_notification_pref_sum">Notification when clip is shared from another device</string>
    <string name="copied_notification_pref">New Copied Clip Notification</string>
    <string name="copied_notification_pref_sum">Notification when text is copied</string>

    <!-- Preferences Titles -->
    <string name="notification_title">Notifications</string>
    <string name="general_title">General</string>
    <string name="deletion_title">Deletion Settings</string>
    <string name="purchase_title">Purchase</string>

    <!-- Extensions Preferences -->
    <string name="extensions_title">Extensions (Link Google Account)</string>
    <string name="chrome_ext_pref_summary">Link to Chrome Extension\n(One-click install if logged in on Chrome)</string>
    <string name="chrome_ext_pref">Chrome Extension</string>
    <string name="edge_ext_pref_summary">Link to Edge Extension</string>
    <string name="edge_ext_pref">Edge Extension</string>
    <string name="firefox_ext_pref_summary">(Coming Soon)</string>
    <string name="firefox_ext_pref">Firefox Extension</string>

    <!-- General Preferences -->
    <string name="user_email_pref">Logged In User</string>
    <string name="always_running_pref">Always Running</string>
    <string name="always_running_pref_sum">Listen for copied text</string>
    <string name="battery_optimization_pref">Battery Optimization</string>
    <string name="battery_optimization_pref_sum">Enable for more stable app performance</string>
    <string name="system_dark_mode">System Dark Mode</string>
    <string name="system_dark_mode_sum">Match system dark mode settings</string>
    <string name="dark_mode">Toggle Dark Mode</string>
    <string name="dark_mode_sum">Turn dark mode On/Off</string>

    <!-- Deletion Preferences -->
    <string name="thrash_pref">Thrash</string>
    <string name="thrash_pref_sum">Deleted clips</string>
    <string name="delete_thrash_pref">Delete Thrash</string>
    <string name="delete_thrash_pref_sum">Permanently delete all thrash</string>
    <string name="package_name">com.fade.sharedclipboard</string>
    <string name="package_name_thrash_activity">com.fade.sharedclipboard.ThrashActivity</string>

    <!-- Battery Optimization -->
    <string name="dont_show">Don\'t show this message again</string>
    <string name="bat_opti">Battery Optimization</string>

    <!-- Main App Strings -->
    <string name="app_name">Shared Clipboard</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="app_icon">App Icon</string>
    <string name="push_pin_icon">Push Pin Icon</string>
    <string name="pinned_clips">Pinned Clips</string>
    <string name="clipboard_text">Copied Text Appears Here…</string>
    <string name="save_f" formatted="true">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;SAVE</string>
    <string name="save">Save</string>
    <string name="shared_clipboard">Shared Clipboard</string>
    <string name="share">Share To Devices</string>
    <string name="shared">Shared Successfully</string>
    <string name="indicator">Indicator</string>
    <string name="saved">SAVED!</string>
    <string name="empty_editbox">No Content To Save</string>
    <string name="reading_storage">Error Occurred In Reading Storage</string>
    <string name="sync_button">Sync Button</string>
    <string name="cancel">Cancel</string>
    <string name="required">Required</string>
    <string name="conf_req_text">Must match with password</string>
    <string name="logout_button">Logout Button</string>
    <string name="short_password">Password must be at least 6 characters long</string>
    <string name="invalid_email_format">Email format is invalid</string>
    <string name="email_used">Email has already been used</string>
    <string name="email_inexistent">Email doesn\'t exist</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="new_clip">New Clip</string>
    <string name="failed_to_upload">Failed To Upload Current Clip</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup_failed">Sign-up Failed</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore">Restore</string>
    <string name="delete_conf">Delete?</string>
    <string name="delete_conf_message">Are you sure you want to delete these clips?</string>
    <string name="content">Content</string>
    <string name="copied">Copied to Clipboard</string>
    <string name="text_limit">Text Limit Reached (3000 characters)</string>
    <string name="search_limit">Search Limit Reached (150 characters)</string>
    <string name="warning_symbol">Warning Symbol</string>
    <string name="please_update_app">Please Update App</string>
    <string name="database_update">Current clip updated from database</string>
    <string name="copy_text">Copy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="alert_sure">Are you sure?</string>
    <string name="alert">Alert</string>
    <string name="accept">Accept</string>
    <string name="restore_delete">Do you want to restore or permanently delete this clip?</string>
    <string name="always_running_warning">This will prevent the app from functioning in the background and stop realtime notifications for shared clips.\n\nConsider turning off notifications instead.</string>
    <string name="back_press">Back Press</string>
    <string name="link_fail_message">If Google account is already linked to another account, log in with Google sign in and delete prior account before preceding.</string>
    <string name="link_fail_title">Unable To Link Account</string>
    <string name="link_successful">Account Linked Successfully</string>
    <string name="ok">Okay</string>
    <string name="stability">To allow the app to have more stability please follow the procedure below</string>
    <string name="optimisation_instructions">Optimisation Instructions</string>
    <string name="google_signin_button">Google SignIn Button</string>
    <string name="use_google_sign_in_method">Use Google Sign-In Method</string>
    <string name="use_password_method">Use Password Method</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="first_page_text">The easiest way to share links and texts between devices!</string>
    <string name="second_page_text">Notified on new copied text, and text from other devices.</string>
    <string name="third_page_text">Save important text and links for later.\nSynced between devices!</string>
    <string name="fourth_page_text">Easy to use Extensions!\n(Link in settings) (Required)</string>
    <string name="get_started">Proceed</string>
    <string name="empty" />
    <string name="welcome_to">Welcome to</string>
    <string name="top_icon">Top Icon</string>
    <string name="center_image">Center Image</string>
    <string name="center_icon">Center Icon</string>
    <string name="canceled_purchase">Purchase was canceled</string>
    <string name="purchase_pending">Purchase is pending…</string>
    <string name="successful_purchase">Purchase was successful</string>
    <string name="purchase_error">Purchase Error Occurred</string>
    <string name="connection_google_play">Connecting to Google Play Services, Please Wait…</string>
    <string name="purchase_warning">Purchase Warning</string>
    <string name="prior_purchase">Detected prior purchase on Google Playstore account that has not yet been activated. This is likely due to a purchase being processed by another user. If activated on this account prior account purchase will be cancelled.</string>
    <string name="prior_purchase_positive">Activate, cancel on prior account</string>
    <string name="copy_text_icon">Copy Text Icon</string>
    <string name="intro_pref_title">View Intro Page</string>
    <string name="intro_pref_sum">View beginning intro page</string>
    <string name="enable_dark_mode">Toggle Dark mode</string>



</resources>
