<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"
        app:title="@string/general_title">

        <Preference
            app:title="@string/user_email_pref"
            app:key="logged_in_user_pref"/>

        <SwitchPreference
            app:defaultValue="true"
            app:summary="@string/always_running_pref_sum"
            app:title="@string/always_running_pref"
            app:key="always_running_pref"/>

        <Preference
            app:icon="@drawable/warning_bright"
            app:isPreferenceVisible="false"
            app:summary="@string/battery_optimization_pref_sum"
            app:title="@string/battery_optimization_pref"
            app:key="battery_optimization_pref"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:title="@string/notification_title">

        <SwitchPreference
            app:defaultValue="true"
            app:summary="@string/copied_notification_pref_sum"
            app:title="@string/copied_notification_pref"
            app:key="copied_notification_pref"/>

        <SwitchPreference
            app:defaultValue="true"
            app:summary="@string/database_notification_pref_sum"
            app:title="@string/database_notification_pref"
            app:key="database_notification_pref"/>

        <Preference
            app:layout="@layout/notification_preference_text"
            app:title="@string/system_notifications"
            app:key="notification_settings"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:title="@string/deletion_title">

        <Preference
            app:summary="@string/thrash_pref_sum"
            app:title="@string/thrash_pref"
            app:icon="@drawable/delete_grey">
            <intent
                android:targetPackage="@string/package_name"
                android:targetClass="@string/package_name_thrash_activity"/>
        </Preference>

        <Preference
            app:summary="@string/delete_thrash_pref_sum"
            app:title="@string/delete_thrash_pref"
            app:key="delete_all_pref"
            app:icon="@drawable/delete_red"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:title="@string/account_title">

        <Preference
            app:title="@string/google_pref_title"
            app:icon="@drawable/googleg_standard_color_18"
            app:summary="@string/google_pref_sum"
            app:isPreferenceVisible="false"
            app:key="google_pref"/>

        <Preference
            app:layout="@layout/delete_account_preference_text"
            app:title="Delete Account"
            app:key="delete_account_pref"/>


    </PreferenceCategory>

</PreferenceScreen>
