<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/emailDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/passwordDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailDialog"
        app:layout_constraintVertical_bias="0.1"
        tools:layout_editor_absoluteX="-55dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/emailDialogReqText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/emailDialog"
        app:layout_constraintTop_toBottomOf="@+id/emailDialog" />

    <TextView
        android:id="@+id/passwordDialogReqText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/passwordDialog"
        app:layout_constraintTop_toBottomOf="@+id/passwordDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>